--- a/ProjectAtipax/ProjectAtipax/Views/Consultas/ConsultarPedido.cshtml
+++ b/ProjectAtipax/ProjectAtipax/Views/Consultas/ConsultarPedido.cshtml
@@ -17,7 +17,7 @@
             @Html.TextBox("fecha")
             </div>
             <div class="col-auto">
-                    <button type="button"  class="btn btn-outline-success btCiudad">BUSCAR</button>
+                    <button  class="btn btn-outline-success btCiudad">BUSCAR</button>
             </div>
         </div>
     </form>
