--- a/ProjectAtipax/ProjectAtipax/Views/ManteCategoria/Create.cshtml
+++ b/ProjectAtipax/ProjectAtipax/Views/ManteCategoria/Create.cshtml
@@ -29,7 +29,7 @@
                 <span asp-validation-for="NombreCategoria" class="text-danger"></span>
             </div>
             <div class="form-group">
-                    <input type="submit" value="Create" class="btn btn-outline-success" />
+                    <input type="submit" value="Agregar" class="btn btn-outline-success" />
             </div>
         </form>
     </div>
